Fixed long company name word wrap bug

--- a/app/assets/stylesheets/stylesheet.css.scss
+++ b/app/assets/stylesheets/stylesheet.css.scss
@@ -116,6 +116,9 @@ pre {
 
 .job-title {
   font-size: 26px;
+  max-width: 100%;
+  color: #C73136;
+  word-wrap: break-word;
 }
 
 .note-title {
